R DBSCAN implementation added

--- a/DBSCAN Benchmark_bmt.ipynb
+++ b/DBSCAN Benchmark_bmt.ipynb
@@ -616,10 +616,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#NB: unzip file prior to submission\n",
+    "#note: kaggle submit tool would not work.\n",
+    "#kaggle competitions submit -c trackml-particle-identification -f submission.csv -m \"1st submit\"\n",
+    "#"
+   ]
   },
   {
    "cell_type": "code",
